Correction résolution mobile

--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -11,6 +11,7 @@ object {
 
 .rowMenu {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .blockMenu {
