--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,8 +78,6 @@ code.has-jax {
         text-shadow: 0px 0px 0px;
         text-decoration: none;
     }
-    height:130px;
-
 }
 
 .sommaire {
